Fix dropdown overlapping issue

--- a/components/Navbar/Navbar.module.scss
+++ b/components/Navbar/Navbar.module.scss
@@ -12,6 +12,7 @@
   a {
     text-decoration: none;
     color: white;
+    z-index: 10;
   }
   .other {
     display: flex;
@@ -36,7 +37,7 @@
       position: absolute;
       padding-top: 8rem;
       padding-bottom: 20px;
-      width: 15%;
+      width: 20%;
       box-shadow: 0px 4px 0px rgba(0, 0, 0, 0.25);
 
       a {
